--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "next.config.js",
-      "use": "@vercel/next"
-    }
-  ],
+  "outputDirectory": ".next",
   "routes": [
     { "src": "/(.*)", "dest": "/" }
   ]
